feat: add tags to minichunk